--- a/index.html
+++ b/index.html
@@ -2,9 +2,8 @@
 <html>
 <head>
 <title>青椒博客</title>
-<script type=”text/javascript” charset=”utf-8″ src=”phonegap.js”></script>
 </head>
 <body>
-<h1>你好， 青椒。</h1>
+<h1>hello qingjiao</h1>
 </body>
 </html>
